attempt to fix all images on mobile

--- a/default.css
+++ b/default.css
@@ -24,6 +24,7 @@ i {
 }
 
 img {
+    object-fit: contain;
     width: 80%;
     height: auto;
     border-radius: 1.5%;
